automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -256,7 +256,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" \"print my_string\".endswith(\".com\")# False\n"
+    "\"art.vandelay@vandelay.co\" \"art.vandelay.co\".endswith(\".com\")# False\n"
    ]
   },
   {
